--- a/langganan.html
+++ b/langganan.html
@@ -51,9 +51,10 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="d-block w-100" src="assets/img/carousel-4.png" alt="First slide">
-                <div class="carousel-caption d-none d-md-block">
-                    <h1>Jadilah Programmer Handal</h1>
-                    <p>Dengan Berlangganan di Belajar Koding Bayar Sekali, Akses Selamanya.</p>
+                <div class="carousel-caption">
+                    <h3 class="mt-5">Jadilah Programmer Handal</h3>
+                    <p>Dengan Berlangganan di Belajar Koding Bayar Sekali, Akses Selamanya. <br>dan dapatkan serfikat.
+                    </p>
                     <a class="btn btn-primary" href="#kelas-premium" role="button">Mulai Berlangganan</a>
                 </div>
             </div>
@@ -67,7 +68,7 @@
         </center>
 
         <div class="row mt-5 mb-5 kelas-premium" id="kelas-premium">
-            <div class="col-sm">
+            <div class="col-md-4 col-sm-12">
                 <div class="card kelas-kotlin">
                     <a href="#exampleModalLong" class="text-dark nav-link" data-toggle="modal" data-target="#exampleModalLong">
                         <div class="card-body ">
@@ -78,7 +79,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-sm ">
+            <div class="col-md-4 col-sm-12">
                 <div class="card kelas-py ">
                     <a href="#exampleModalLong" class="text-dark nav-link" data-toggle="modal" data-target="#exampleModalLong">
                         <div class="card-body ">
@@ -89,7 +90,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-sm ">
+            <div class="col-md-4 col-sm ">
                 <div class="card kelas-java ">
                     <a href="#exampleModalLong" class="text-dark nav-link" data-toggle="modal" data-target="#exampleModalLong">
                         <div class="card-body ">
@@ -115,7 +116,7 @@
                 </div>
                 <div class="modal-body">
                     <input type="text" id="nama" class="form-control" placeholder="Nama Lengkap" aria-label="Nama Lengkap" aria-describedby="basic-addon1">
-                    <input type="text" id="email" class="form-control mt-2" placeholder="Email" aria-label="email" aria-describedby="basic-addon1">
+                    <input type="email" id="email" class="form-control mt-2" placeholder="Email" aria-label="email" aria-describedby="basic-addon1">
                     <p>Status : </p>
                     <div class="status">
                         <input type="radio" name="mhs"> Mahasiswa
@@ -123,11 +124,18 @@
                         <input type="radio" name="mhs"> Pekerja
                         <input type="radio" name="mhs"> Yang Lain
                     </div>
+                    <br>
+                    <p>Pilih Kelas : </p>
+                    <div class="status">
+                        <input type="radio" name="course" value="kotlin"> Kotlin
+                        <input type="radio" name="course" value="python"> Python
+                        <input type="radio" name="course" value="java"> Java
+                    </div>
                     <input type="text" class="form-control mt-2" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary btn-mulai">Save changes</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Batal</button>
+                    <button type="button" class="btn btn-primary btn-mulai">Bergabung</button>
                 </div>
             </div>
         </div>
