--- a/page-source/course/course-js.html
+++ b/page-source/course/course-js.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="row mb-4 konten">
-            <div class="nav flex-column nav-pills col-sm-2 mt-2" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            <div class="nav flex-column nav-pills col-md-2 col-sm-12 mt-2" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                 <a class="nav-link active" id="v-pills-pertama-tab" data-toggle="pill" href="#v-pills-pertama" role="tab" aria-controls="v-pills-pertama" aria-selected="true">Apa Itu Javascript ? </a>
                 <a class="nav-link" id="v-pills-kedua-tab" data-toggle="pill" href="#v-pills-kedua" role="tab" aria-controls="v-pills-kedua" aria-selected="false">Sejarah Javascript</a>
                 <a class="nav-link" id="v-pills-ketiga-tab" data-toggle="pill" href="#v-pills-ketiga" role="tab" aria-controls="v-pills-ketiga" aria-selected="false">Peralatan</a>
