--- a/home.html
+++ b/home.html
@@ -15,10 +15,10 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light navigasi">
+    <nav class="navbar navbar-expand-lg navbar-dark navigasi">
         <div class="container">
             <a class="navbar-brand text-light" href="home.html">Belajar Koding</a>
-            <button class="navbar-toggler bg-light " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon "></span>
         </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -55,24 +55,24 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="assets/img/carousel-1.png" alt="First slide">
-                <div class="carousel-caption d-none d-md-block">
-                    <h2>Mulai Mempelajari Skill</h2>
-                    <p>Skill Programming Yang Banyak Dicari Perusahaan.</p>
+                <img class="d-block img-fluid" height="400px" width="100%" src="assets/img/carousel-1.png" alt="First slide">
+                <div class="carousel-caption">
+                    <h3>Mulai Mempelajari Programming</h3>
+                    <p>Untuk mulai berkarya</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="assets/img/carousel-2.png" alt="Second slide">
-                <div class="carousel-caption d-none d-md-block">
-                    <h2>Mulai Mempelajari Skill</h2>
-                    <p>Skill Programming Yang Banyak Dicari Perusahaan.</p>
+                <div class="carousel-caption">
+                    <h3>Mudah Dan Menyenangkan</h3>
+                    <p>Belajar tanpa ada harus takut stress</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="assets/img/carousel-3.png" alt="Third slide">
-                <div class="carousel-caption d-none d-md-block">
-                    <h2>Mulai Mempelajari Skill</h2>
-                    <p>Skill Programming Yang Banyak Dicari Perusahaan.</p>
+                <div class="carousel-caption">
+                    <h3>Mulai Mempelajari Skill</h3>
+                    <p>Skill yang banyak dicari di perusahaan !</p>
                 </div>
             </div>
         </div>
@@ -95,7 +95,7 @@
         <div class="kelas-free mt-5 mb-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm">
+                    <div class="col-md-4  col-sm-12">
                         <a href="page-source/course/course-css.html" class="nav-link text-dark">
                             <div class="card kelas-css">
                                 <div class="card-body">
@@ -105,7 +105,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-sm">
+                    <div class="col-md-4  col-sm-12">
                         <a href="page-source/course/course-html.html" class="nav-link text-dark">
                             <div class="card kelas-html">
                                 <div class="card-body">
@@ -115,7 +115,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-sm">
+                    <div class="col-md-4  col-sm-12">
                         <a href="page-source/course/course-js.html" class="nav-link text-dark">
                             <div class="card kelas-js">
                                 <div class="card-body">
