--- a/login.html
+++ b/login.html
@@ -51,12 +51,12 @@
     <!-- Konten -->
     <div class="container text-center pt-5 mb-3">
         <div class="row">
-            <div class="col-sm text-center">
+            <div class="col-md-6 col-sm-12 text-center">
                 <img src="assets/img/login-icon.svg" width="250">
                 <h1 class="mt-3">Belajar Programming, Mulai dari Nol</h1>
                 <p class="text-muted">Belajar membuat website dan aplikasi. Bingung mulai dari mana? Tenang, mari bergabung bersama Belajar Koding. Mau bekerja sebagai programmer atau membuat karya, kamu juga bisa!</p>
             </div>
-            <div class="col-sm">
+            <div class="col-md-6 col-sm-12">
                 <div class="card form-login">
                     <div class="card-body">
                         <h2 class="text-light">Selamat Datang, User!</h2>
