--- a/page-source/course/course-css.html
+++ b/page-source/course/course-css.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light navigasi">
+    <nav class="navbar navbar-expand-lg navbar-dark navigasi">
         <div class="container">
             <a class="navbar-brand text-light" href="../../../home.html">Belajar Koding</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,14 +54,15 @@
         </div>
 
         <div class="row mb-4">
-            <div class="nav flex-column nav-pills col-sm-2 mt-2" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            <div class="nav flex-column nav-pills col-md-2 col-sm-12 mt-2" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                 <a class="nav-link active" id="v-pills-pertama-tab" data-toggle="pill" href="#v-pills-pertama" role="tab" aria-controls="v-pills-pertama" aria-selected="true">Apa Itu CSS ? </a>
                 <a class="nav-link" id="v-pills-kedua-tab" data-toggle="pill" href="#v-pills-kedua" role="tab" aria-controls="v-pills-kedua" aria-selected="false">Penulisan CSS</a>
                 <a class="nav-link" id="v-pills-ketiga-tab" data-toggle="pill" href="#v-pills-ketiga" role="tab" aria-controls="v-pills-ketiga" aria-selected="false">Selektor CSS</a>
-                <a class="nav-link" id="v-pills-keempat-tab" data-toggle="pill" href="#v-pills-keempat" role="tab" aria-controls="v-pills-keempat" aria-selected="false">Komentar pada CSS</a>
+                <a class="nav-link" id="v-pills-keempat-tab" data-toggle="pill" href="#v-pills-keempat" role="tab" aria-controls="v-pills-keempat" aria-selected="false">Komentar CSS</a>
             </div>
             <div class="tab-content isi-konten mt-2 col-sm p-5" id="v-pills-tabContent">
                 <div class="tab-pane fade show active" id="v-pills-pertama" role="tabpanel" aria-labelledby="v-pills-pertama-tab">
+                    <h2 class="font-weight-bold">Apa itu CSS ?</h2>
                     <p>CSS adalah bahasa Cascading Style Sheet dan biasanya digunakan untuk mengatur tampilan elemen yang tertulis dalam bahasa markup, seperti HTML. CSS berfungsi untuk memisahkan konten dari tampilan visualnya di situs.</p>
                     <p>CSS dibuat dan dikembangkan oleh W3C (World Wide Web Consortium) pada tahun 1996 untuk alasan yang sederhana. Dulu HTML tidak dilengkapi dengan tags yang berfungsi untuk memformat halaman. Anda hanya perlu menulis markup untuk situs.</p>
                     <p>Tags, seperti font, diperkenalkan di HTML versi 3.2, dan ketika itu menyebabkan banyak masalah bagi developer. Karena website memiliki berbagai font, warna background, dan style, maka untuk menulis kembali (rewrite) kode memerlukan
@@ -70,8 +71,9 @@
                     <p>Tak hanya penting di sisi teknis, CSS juga berpengaruh pada tampilan sebuah website. Tentunya Anda tidak ingin website terlihat seperti situs yang ‘telanjang’ tanpa modifikasi apa pun, bukan?</p>
                 </div>
                 <div class="tab-pane fade" id="v-pills-kedua" role="tabpanel" aria-labelledby="v-pills-kedua-tab">
+                    <h2 class="font-weight-bold">Penulisan CSS</h2>
                     <p>Aturan Penulisan CSS terdiri dari selektor dan blok deklarasi:</p>
-                    <center><img src="https://www.w3schools.com/css/selector.gif" style="width:50vw;"></center>
+                    <center><img src="https://www.w3schools.com/css/selector.gif" class="img-fluid"></center>
                     <ul class="mt-2">
                         <li>Selektor menunjuk ke elemen HTML yang ingin Anda gaya.</li>
                         <li>Blok deklarasi berisi satu atau lebih deklarasi yang dipisahkan oleh titik koma.
@@ -82,6 +84,7 @@
                     </ul>
                 </div>
                 <div class="tab-pane fade" id="v-pills-ketiga" role="tabpanel" aria-labelledby="v-pills-ketiga-tab">
+                    <h2 class="font-weight-bold">Selektor Pada CSS</h2>
                     <p>Pemilih CSS digunakan untuk "menemukan" (atau memilih) elemen HTML yang ingin Anda gaya.</p>
                     <p>Kita dapat membagi pemilih CSS menjadi lima kategori:</p>
                     <ul>
@@ -93,6 +96,7 @@
                     </ul>
                 </div>
                 <div class="tab-pane fade" id="v-pills-keempat" role="tabpanel" aria-labelledby="v-pills-keempat-tab">
+                    <h2 class="font-weight-bold">Komentar Pada CSS</h2>
                     <p>Komentar digunakan untuk menjelaskan kode, dan dapat membantu ketika Anda mengedit kode sumber di lain waktu.</p>
                     <p>Komentar diabaikan oleh browser.</p>
                 </div>
