--- a/bantuan.html
+++ b/bantuan.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/custom_style.css">
+	<link rel="icon" href="assets/img/title-icon.png" type="image/x-icon">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
@@ -20,20 +21,23 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 		    <ul class="navbar-nav ml-auto">
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Home</a>
+		        <a class="nav-link" href="home.html">Home</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="kontak.html">Kontak</a>
 		      </li>
 		      <li class="nav-item">
-			    <a class="nav-link" href="#">Langganan</a>
+			    <a class="nav-link" href="langganan.html">Langganan</a>
 			  </li>
 			  <li class="nav-item">
-			    <a class="nav-link active" href="#">Bantuan</a>
+			    <a class="nav-link active" href="bantuan.html">Bantuan</a>
 			  </li>
 			  <li class="nav-item">
 			    <a class="nav-link" href="profil.html">Profil</a>
 			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="login.html">Login</a>
+			</li>
 			</ul>
 		</div>
 	  </div>
