--- a/langganan.html
+++ b/langganan.html
@@ -155,19 +155,19 @@
                     <p>Pelajaran</p>
                     <p>Bantuan</p>
                 </div>
-                <div class="col-sm ">
+                <div class="col-sm">
                     <h4>Ikuti Kami</h4>
                     <table>
-                        <tr>
-                            <td><i class="fa fa-twitter "></i></td>
+                        <tr id="twitter">
+                            <td><i class="fa fa-twitter"></i></td>
                             <td> Twitter</td>
                         </tr>
-                        <tr>
-                            <td><i class="fa fa-facebook "></i></td>
+                        <tr id="fb">
+                            <td><i class="fa fa-facebook"></i></td>
                             <td> Facebook</td>
                         </tr>
-                        <tr>
-                            <td><i class="fa fa-github "></i></td>
+                        <tr id="github">
+                            <td><i class="fa fa-github"></i></td>
                             <td> Github</td>
                         </tr>
                     </table>
