--- a/home.html
+++ b/home.html
@@ -151,15 +151,15 @@
                 <div class="col-sm">
                     <h4>Ikuti Kami</h4>
                     <table>
-                        <tr>
+                        <tr id="twitter">
                             <td><i class="fa fa-twitter"></i></td>
                             <td> Twitter</td>
                         </tr>
-                        <tr>
+                        <tr id="fb">
                             <td><i class="fa fa-facebook"></i></td>
                             <td> Facebook</td>
                         </tr>
-                        <tr>
+                        <tr id="github">
                             <td><i class="fa fa-github"></i></td>
                             <td> Github</td>
                         </tr>
