--- a/login.html
+++ b/login.html
@@ -19,9 +19,10 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white mt-4">
         <div class="container">
             <a class="navbar-brand" href="login.html">Belajar Koding</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -54,7 +55,9 @@
             <div class="col-md-6 col-sm-12 text-center">
                 <img src="assets/img/login-icon.svg" width="250">
                 <h1 class="mt-3">Belajar Programming, Mulai dari Nol</h1>
-                <p class="text-muted">Belajar membuat website dan aplikasi. Bingung mulai dari mana? Tenang, mari bergabung bersama Belajar Koding. Mau bekerja sebagai programmer atau membuat karya, kamu juga bisa!</p>
+                <p class="text-muted">Belajar membuat website dan aplikasi. Bingung mulai dari mana? Tenang, mari
+                    bergabung bersama Belajar Koding. Mau bekerja sebagai programmer atau membuat karya, kamu juga bisa!
+                </p>
             </div>
             <div class="col-md-6 col-sm-12">
                 <div class="card form-login">
@@ -64,14 +67,16 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1"></span>
                             </div>
-                            <input type="text" id="username" class="form-control" placeholder="Username" aria-label="username" aria-describedby="basic-addon1">
+                            <input type="text" id="username" class="form-control" placeholder="Username"
+                                aria-label="username" aria-describedby="basic-addon1">
                         </div>
 
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1"></span>
                             </div>
-                            <input type="email" id="email" class="form-control" placeholder="Email" aria-label="email" aria-describedby="basic-addon1">
+                            <input type="email" id="email" class="form-control" placeholder="Email" aria-label="email"
+                                aria-describedby="basic-addon1">
 
                         </div>
 
@@ -79,7 +84,8 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1"></span>
                             </div>
-                            <input type="password" id="pass" class="form-control" placeholder="Password" aria-label="password" aria-describedby="basic-addon1">
+                            <input type="password" id="pass" class="form-control" placeholder="Password"
+                                aria-label="password" aria-describedby="basic-addon1">
                         </div>
 
                         <a class="btn btn-primary w-100 btn-login" href="#" role="button">Login</a>
@@ -94,6 +100,8 @@
             </div>
         </div>
     </div>
+
+
     <!-- Akhir Konten -->
 
     <!-- javascript -->
@@ -101,6 +109,8 @@
     <script type="text/javascript" src="js/popper.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/ali.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
 </body>
 
 </html>
