--- a/page-source/course/course-html.html
+++ b/page-source/course/course-html.html
@@ -17,9 +17,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark navigasi">
         <div class="container">
             <a class="navbar-brand text-light" href="../../../home.html">Belajar Koding</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -54,27 +55,46 @@
         </div>
 
         <div class="row mb-4">
-            <div class="nav flex-column nav-pills col-md-2 col-sm-12 mt-2" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                <a class="nav-link active" id="v-pills-pertama-tab" data-toggle="pill" href="#v-pills-pertama" role="tab" aria-controls="v-pills-pertama" aria-selected="true">Apa Itu HTML ? </a>
-                <a class="nav-link" id="v-pills-kedua-tab" data-toggle="pill" href="#v-pills-kedua" role="tab" aria-controls="v-pills-kedua" aria-selected="false">Sejarah HTML</a>
-                <a class="nav-link" id="v-pills-ketiga-tab" data-toggle="pill" href="#v-pills-ketiga" role="tab" aria-controls="v-pills-ketiga" aria-selected="false">Apa Itu Tag ?</a>
-                <a class="nav-link" id="v-pills-keempat-tab" data-toggle="pill" href="#v-pills-keempat" role="tab" aria-controls="v-pills-keempat" aria-selected="false">Apa Itu Element ? </a>
-                <a class="nav-link" id="v-pills-kelima-tab" data-toggle="pill" href="#v-pills-kelima" role="tab" aria-controls="v-pills-kelima" aria-selected="false">Apa Itu Attribute ? </a>
-                <a class="nav-link" id="v-pills-enam-tab" data-toggle="pill" href="#v-pills-enam" role="tab" aria-controls="v-pills-enam" aria-selected="false">Kerangka Inti HTML</a>
-                <a class="nav-link" id="v-pills-tujuh-tab" data-toggle="pill" href="#v-pills-tujuh" role="tab" aria-controls="v-pills-tujuh" aria-selected="false">Editor HTML</a>
+            <div class="nav flex-column nav-pills col-md-2 col-sm-12 mt-2" id="v-pills-tab" role="tablist"
+                aria-orientation="vertical">
+                <a class="nav-link active" id="v-pills-pertama-tab" data-toggle="pill" href="#v-pills-pertama"
+                    role="tab" aria-controls="v-pills-pertama" aria-selected="true">Apa Itu HTML ? </a>
+                <a class="nav-link" id="v-pills-kedua-tab" data-toggle="pill" href="#v-pills-kedua" role="tab"
+                    aria-controls="v-pills-kedua" aria-selected="false">Sejarah HTML</a>
+                <a class="nav-link" id="v-pills-ketiga-tab" data-toggle="pill" href="#v-pills-ketiga" role="tab"
+                    aria-controls="v-pills-ketiga" aria-selected="false">Apa Itu Tag ?</a>
+                <a class="nav-link" id="v-pills-keempat-tab" data-toggle="pill" href="#v-pills-keempat" role="tab"
+                    aria-controls="v-pills-keempat" aria-selected="false">Apa Itu Element ? </a>
+                <a class="nav-link" id="v-pills-kelima-tab" data-toggle="pill" href="#v-pills-kelima" role="tab"
+                    aria-controls="v-pills-kelima" aria-selected="false">Apa Itu Attribute ? </a>
+                <a class="nav-link" id="v-pills-enam-tab" data-toggle="pill" href="#v-pills-enam" role="tab"
+                    aria-controls="v-pills-enam" aria-selected="false">Kerangka Inti HTML</a>
+                <a class="nav-link" id="v-pills-tujuh-tab" data-toggle="pill" href="#v-pills-tujuh" role="tab"
+                    aria-controls="v-pills-tujuh" aria-selected="false">Editor HTML</a>
+                <p class="mt-3">2021. Belajar Koding</p>
             </div>
             <div class="tab-content isi-konten mt-2 col-sm p-5" id="v-pills-tabContent">
-                <div class="tab-pane fade show active" id="v-pills-pertama" role="tabpanel" aria-labelledby="v-pills-pertama-tab">
+                <div class="tab-pane fade show active" id="v-pills-pertama" role="tabpanel"
+                    aria-labelledby="v-pills-pertama-tab">
                     <h2 class="font-weight-bold">Apa itu HTML ?</h2>
-                    <p>HTML (Hypertext Markup Language) merupakan gabungan dari dua istilah: hypertext dan markup language.<br>Apa sih itu? <br>Hypertext yaitu dokumen berisi tautan yang memungkinkan pengguna terhubung ke halaman lain. Sedangkan markup language
-                        merupakan bahasa komputer yang terdiri dari sekumpulan kode untuk mengatur struktur dan menyajikan informasi. Jadi, HTML adalah bahasa markup untuk membuat struktur halaman website. </p>
+                    <p>HTML (Hypertext Markup Language) merupakan gabungan dari dua istilah: hypertext dan markup
+                        language.<br>Apa sih itu? <br>Hypertext yaitu dokumen berisi tautan yang memungkinkan pengguna
+                        terhubung ke halaman lain. Sedangkan markup language
+                        merupakan bahasa komputer yang terdiri dari sekumpulan kode untuk mengatur struktur dan
+                        menyajikan informasi. Jadi, HTML adalah bahasa markup untuk membuat struktur halaman website.
+                    </p>
 
                 </div>
                 <div class="tab-pane fade" id="v-pills-kedua" role="tabpanel" aria-labelledby="v-pills-kedua-tab">
                     <h2 class="font-weight-bold">Sejarah HTML </h2>
-                    <p>Tahun 1991 adalah saksi kelahiran HTML. Dibuat oleh seorang ilmuwan bernama Tim Berners-Lee, HTML awalnya menjadi solusi untuk memudahkan para ilmuwan dalam mengakses dokumen satu sama lain.<br><br>Namun, siapa sangka HTML berkembang
-                        dan menjelma sebagai pondasi untuk membuat website di era terkini? Bahkan, 90.8% website di dunia menggunakan bahasa markup ini, lho. Menakjubkan, bukan?<br><br>Tentunya, kepopuleran HTML tersebut didapat setelah melalui sejarah
-                        yang panjang. Secara singkatnya, Anda bisa mengikuti sekilas perjalanan HTML pada tabel berikut.</p>
+                    <p>Tahun 1991 adalah saksi kelahiran HTML. Dibuat oleh seorang ilmuwan bernama Tim Berners-Lee, HTML
+                        awalnya menjadi solusi untuk memudahkan para ilmuwan dalam mengakses dokumen satu sama
+                        lain.<br><br>Namun, siapa sangka HTML berkembang
+                        dan menjelma sebagai pondasi untuk membuat website di era terkini? Bahkan, 90.8% website di
+                        dunia menggunakan bahasa markup ini, lho. Menakjubkan, bukan?<br><br>Tentunya, kepopuleran HTML
+                        tersebut didapat setelah melalui sejarah
+                        yang panjang. Secara singkatnya, Anda bisa mengikuti sekilas perjalanan HTML pada tabel berikut.
+                    </p>
                 </div>
                 <div class="tab-pane fade" id="v-pills-ketiga" role="tabpanel" aria-labelledby="v-pills-ketiga-tab">
                     <h2 class="font-weight-bold">Apa itu Tag ?</h2>
@@ -85,46 +105,56 @@
                 <div class="tab-pane fade" id="v-pills-keempat" role="tabpanel" aria-labelledby="v-pills-keempat-tab">
                     <h2 class="font-weight-bold">Apa itu Element ?</h2>
                     <p>Element, merupakan keseluruhan kode yang terdiri dari tag pembuka (
-                        <>) hingga tag penutup (
-                            </>). Contohnya: &lt;h1> Contoh Elemen &lt;/h1>. Meski demikian, tidak semua tag HTML memiliki pasangan penutup;</p>
+                        &lt;>) hingga tag penutup (
+                        &lt;/>). Contohnya: &lt;h1> Contoh Elemen &lt;/h1>. Meski demikian, tidak semua tag HTML
+                        memiliki
+                        pasangan penutup;</p>
                 </div>
                 <div class="tab-pane fade" id="v-pills-kelima" role="tabpanel" aria-labelledby="v-pills-kelima-tab">
                     <h2 class="font-weight-bold">Apa itu Attribute ?</h2>
                     Attribute, yaitu informasi atau perintah tambahan yang berada di dalam elemen. Misalnya:
-                    < img src=”pantai.jpg” alt=”Pantai Baron.”> Elemen ini menggunakan tag
-                        < img> dengan atribut sumber gambar (src) dan alt text (alt).
+                    &lt;img src=”pantai.jpg” alt=”Pantai Baron.”> Elemen ini menggunakan tag
+                    &lt;img> dengan atribut sumber gambar (src) dan alt text (alt).
                 </div>
                 <div class="tab-pane fade" id="v-pills-enam" role="tabpanel" aria-labelledby="v-pills-enam-tab">
                     <h2 class="font-weight-bold">Kerangka Inti HTML</h2>
-                    <p>Sampai sini, Anda sudah mengetahui apa saja atom penyusun HTML. Jika atom-atom tersebut dikumpulkan, terbentuklah dokumen HTML.</p>
-                    <p>Namun, mari usir bayangan dokumen HTML yang dipenuhi ratusan tag. Kita akan mengulik bentuk dokumen HTML paling sederhana dan menjadi kerangka inti yang menyusun setiap dokumen HTML di dunia ini.</p>
+                    <p>Sampai sini, Anda sudah mengetahui apa saja atom penyusun HTML. Jika atom-atom tersebut
+                        dikumpulkan, terbentuklah dokumen HTML.</p>
+                    <p>Namun, mari usir bayangan dokumen HTML yang dipenuhi ratusan tag. Kita akan mengulik bentuk
+                        dokumen HTML paling sederhana dan menjadi kerangka inti yang menyusun setiap dokumen HTML di
+                        dunia ini.</p>
                     <ul>
                         <li>
-                            &lt;!DOCTYPE html&gt; berfungsi untuk mendeklarasikan kepada komputer bahwa Anda akan menuliskan perintah dalam kode HTML</li>
-                        <li>&lt;html>&lt/html> merupakan tag yang menandakan bahwa Anda memulai dan mengakhiri dokumen dalam kode HTML</li>
-                        <li>&lt;head>&lt;head> diisi dengan metadata dari dokumen HTML. Seperti judul tab, deskripsi, dan lain-lain</li>
+                            &lt;!DOCTYPE html&gt; berfungsi untuk mendeklarasikan kepada komputer bahwa Anda akan
+                            menuliskan perintah dalam kode HTML</li>
+                        <li>&lt;html>&lt/html> merupakan tag yang menandakan bahwa Anda memulai dan mengakhiri dokumen
+                            dalam kode HTML</li>
+                        <li>&lt;head>&lt;head> diisi dengan metadata dari dokumen HTML. Seperti judul tab, deskripsi,
+                            dan lain-lain</li>
                         <li>&lt;body>&lt;/body> diisi dengan konten halaman website.</li>
                     </ul>
-                    <p>Setelah mengantongi kerangka inti HTML, Anda dapat melengkapinya sesuai dengan tujuan dan kebutuhan halaman website Anda.</p>
-                    <p>Bonus info, jika Anda penasaran untuk melihat dokumen HTML sebuah halaman website, silakan lakukan trik berikut: klik kanan pada mouse dan pilih ‘View page source’. Atau sederhananya dengan menekan Ctrl + U. </p>
+                    <p>Setelah mengantongi kerangka inti HTML, Anda dapat melengkapinya sesuai dengan tujuan dan
+                        kebutuhan halaman website Anda.</p>
+                    <p>Bonus info, jika Anda penasaran untuk melihat dokumen HTML sebuah halaman website, silakan
+                        lakukan trik berikut: klik kanan pada mouse dan pilih ‘View page source’. Atau sederhananya
+                        dengan menekan Ctrl + U. </p>
                 </div>
                 <div class="tab-pane fade" id="v-pills-tujuh" role="tabpanel" aria-labelledby="v-pills-tujuh-tab">
                     <h2 class="font-weight-bold">Belajar HTML dengan Editor HTML</h2>
-                    <p>Dari tadi, kita sudah mempelajari teori belajar HTML dasar. Pasti, Anda sudah tidak sabar untuk segera mempraktikkannya.</p>
-                    <p>Kalau begitu, sekarang saatnya Anda menyiapkan editor HTML. Editor HTML merupakan lembar kerja untuk membuat dan mengedit dokumen HTML.</p>
-                    <p>Ada berbagai editor HTML yang bisa Anda gunakan secara gratis. Seperti Notepad++, Atom, Bracket, dan banyak lagi. Namun sebelum memilih editor HTML, pastikan OS komputer Anda kompatibel.</p>
-                    <p>Nah setelah menginstal editor HTML, Anda bisa belajar HTML dengan lebih mudah. Sebab, fitur yang ditawarkan editor HTML akan mempercepat proses kerja Anda.</p>
-                    <a href="https://www.niagahoster.co.id/blog/html-editor-terbaik/" class="btn btn-primary float-right">Pilih Editor HTML Terbaik</a>
+                    <p>Dari tadi, kita sudah mempelajari teori belajar HTML dasar. Pasti, Anda sudah tidak sabar untuk
+                        segera mempraktikkannya.</p>
+                    <p>Kalau begitu, sekarang saatnya Anda menyiapkan editor HTML. Editor HTML merupakan lembar kerja
+                        untuk membuat dan mengedit dokumen HTML.</p>
+                    <p>Ada berbagai editor HTML yang bisa Anda gunakan secara gratis. Seperti Notepad++, Atom, Bracket,
+                        dan banyak lagi. Namun sebelum memilih editor HTML, pastikan OS komputer Anda kompatibel.</p>
+                    <p>Nah setelah menginstal editor HTML, Anda bisa belajar HTML dengan lebih mudah. Sebab, fitur yang
+                        ditawarkan editor HTML akan mempercepat proses kerja Anda.</p>
+                    <a href="https://www.niagahoster.co.id/blog/html-editor-terbaik/"
+                        class="btn btn-primary float-right">Pilih Editor HTML Terbaik</a>
                 </div>
             </div>
         </div>
     </div>
-
-    <!-- footer -->
-    <div class="container">
-        <p>2021.Belajar Koding</p>
-    </div>
-    <!-- Akhir Footer -->
 
     <!-- javascript -->
     <script type="text/javascript" src="../../js/jquery.min.js"></script>
