--- a/bantuan.html
+++ b/bantuan.html
@@ -78,9 +78,9 @@
                         <button class="form-control btn btn-color" id="post">Post</button>
                     </div>
                     <hr>
-                    <div class="message">
-                        <textarea class="isi_post" id="getmessage"></textarea>
-                    </div>
+                    <ul class="list-group isi_post">
+                        <li class="message list-group-item" id="getmessage"></li>
+                    </ul>
                 </div>
             </div>
             <div class="kanan">
